// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Logic Signatures BasicLsig Artifacts Generates TEAL 1`] = `
"#pragma version 10
//#pragma mode logicsig
intcblock 1

// https://github.com/algorandfoundation/TEALScript

// The address of this logic signature is XBBFEDSZ6KEUC76ZFV5LUYHAYYRKAXRJ7FYUSBWIBTNA4HUYLMHGKGYXPU

b *route_logic

// logic()void
*route_logic:
	// execute logic()void
	callsub logic
	intc 0 // 1
	return

// logic(): void
logic:
	proto 0 0

	// tests/contracts/lsig.algo.ts:6
	// assert(true)
	intc 0 // 1
	assert
	retsub"
`;

exports[`Logic Signatures BasicLsig Artifacts Maintains program size 1`] = `18`;

exports[`Logic Signatures LsigWithArgs Artifacts Generates TEAL 1`] = `
"#pragma version 10
//#pragma mode logicsig
intcblock 1

// https://github.com/algorandfoundation/TEALScript

// The address of this logic signature is W6DDEFBKZB2HZYJ6WYJ3S3RSK57IRNV4LACOOLBGVDEWJ524RQWF5EBMTU

b *route_logic

// logic(uint64,uint64[])void
*route_logic:
	// b: uint64[]
	intc 0 // 1
	args
	extract 2 0

	// a: uint64
	pushint 0
	args
	btoi

	// execute logic(uint64,uint64[])void
	callsub logic
	intc 0 // 1
	return

// logic(a: AssetID, b: uint64[]): void
logic:
	proto 2 0

	// tests/contracts/lsig.algo.ts:13
	// assert(a)
	frame_dig -1 // a: AssetID
	assert

	// tests/contracts/lsig.algo.ts:14
	// assert(b[2])
	frame_dig -2 // b: uint64[]
	store 255 // full array
	load 255 // full array
	extract 16 8
	btoi
	assert
	retsub"
`;

exports[`Logic Signatures LsigWithArgs Artifacts Maintains program size 1`] = `39`;

exports[`Logic Signatures LsigWithPrivateMethod Artifacts Generates TEAL 1`] = `
"#pragma version 10
//#pragma mode logicsig
intcblock 1

// https://github.com/algorandfoundation/TEALScript

// The address of this logic signature is 2G7X6ZCAOFJOVGTOAGVL2ZKKJSLUSV2XFG4SKH3JRUIZ7EY7JWY3T7EQGI

b *route_logic

// privateMethod(): boolean
privateMethod:
	proto 0 1

	// tests/contracts/lsig.algo.ts:21
	// return true;
	intc 0 // 1
	retsub

// logic()void
*route_logic:
	// execute logic()void
	callsub logic
	intc 0 // 1
	return

// logic(): void
logic:
	proto 0 0

	// tests/contracts/lsig.algo.ts:25
	// assert(this.privateMethod())
	callsub privateMethod
	assert
	retsub"
`;

exports[`Logic Signatures LsigWithPrivateMethod Artifacts Maintains program size 1`] = `25`;
